4.ingress-with-istio/3-hotelapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hotel-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: website
